<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    tools:context=".MainActivity">


    <TextView
        style="@style/heading_for_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/chose_login" />

    <Button
        android:id="@+id/btn_user"
        style="@style/btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="187dp"
        android:text="@string/btn_user" />

    <Button
        android:id="@+id/btn_advertiser"
        style="@style/btn_text"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/btn_advertiser" />

    <Button
        android:id="@+id/btn_admin"
        style="@style/btn_text"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/btn_admin" />

    <Button
        android:id="@+id/btnAbout"
        style="@style/btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14dp"
        android:background="@color/colorPrimary"
        android:text="@string/about" />


</RelativeLayout>