<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    tools:context=".FarmersActivity">

    <TextView
        style="@style/heading_for_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="24dp"
        android:text="@string/users_heading" />

    <Button
        android:id="@+id/button6"
        style="@style/btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:text="@string/languages" />

    <Button
        android:id="@+id/button7"
        style="@style/btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button6"
        android:layout_marginTop="205dp"
        android:text="@string/services" />

    <Button
        android:id="@+id/button8"
        style="@style/btn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button6"
        android:layout_marginBottom="170dp"
        android:text="@string/voice" />
    <Button
        android:id="@+id/btnHome"
        style="@style/btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/home" />

</RelativeLayout>