<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    tools:context=".LoginsActivity">

    <TextView
        android:id="@+id/edtUser"
        style="@style/login_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-73dp"
        android:text="@string/logins" />

    <TextView
        style="@style/login_activities"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="73dp"
        android:text="@string/username" />

    <EditText
        android:id="@+id/edtUsers"
        style="@style/login_activities"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-131dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        style="@style/login_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="131dp"
        android:text="@string/pass" />

    <EditText
        android:id="@+id/edtPass"
        style="@style/login_activities"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="138dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/btn_text"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="205dp"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/login" />
</RelativeLayout>