<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="105dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/rajan" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="115dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/sam" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="133dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="48dp"
        app:srcCompat="@drawable/sanchez" />

    <TextView
        android:id="@+id/textView"
        style="@style/heading_imag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView"
        android:text="@string/sam" />

    <TextView
        android:id="@+id/textView4"
        style="@style/heading_imag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:text="@string/rajan" />

    <TextView
        android:id="@+id/textView5"
        style="@style/heading_imag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="-48dp"
        android:text="@string/luis" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="118dp"
        android:layout_height="115dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/imageView3"
        app:srcCompat="@drawable/nasir" />

    <TextView
        android:id="@+id/textView6"
        style="@style/heading_imag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView4"
        android:layout_below="@+id/imageView3"
        android:layout_marginTop="-48dp"
        android:text="@string/nasir" />

    <TextView
        android:id="@+id/textView7"
        style="@style/heading_imag"
        android:layout_width="356dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="184dp"
        android:text="@string/aboutstatment" />
</RelativeLayout>